--- a/nfo/index.html
+++ b/nfo/index.html
@@ -27,7 +27,7 @@
 
         <section id="locationsSection" class="hidden">
             <div class="section-header">
-                <h2>Locations</h2>
+                <h2 id="locationsSectionHeader">Locations</h2>
                 <button id="globalRefreshButton" class="hidden small-refresh-button">Refresh All Stale</button>
             </div>
             <div id="locationButtons">
