--- a/nfo/index.html
+++ b/nfo/index.html
@@ -18,6 +18,13 @@
             text-align: center;
             margin-bottom: 15px;
         }
+        .location-button-weather {
+            display: flex;
+            align-items: center;
+            justify-content: center; /* Center icon and temp within their container */
+            gap: 4px; /* Adds a small space between the icon and temperature */
+            min-height: 24px; /* Ensure a minimum height for alignment */
+        }
     </style>
 </head>
 <body>
