Revert nfo2GO to pre Offline Path

--- a/nfo/index.html
+++ b/nfo/index.html
@@ -18,13 +18,6 @@
             text-align: center;
             margin-bottom: 15px;
         }
-        .location-button-weather {
-            display: flex;
-            align-items: center;
-            justify-content: center; /* Center icon and temp within their container */
-            gap: 4px; /* Adds a small space between the icon and temperature */
-            min-height: 24px; /* Ensure a minimum height for alignment */
-        }
     </style>
 </head>
 <body>
@@ -34,7 +27,7 @@
 
         <section id="locationsSection" class="hidden">
             <div class="section-header">
-                <h2 id="locationsSectionHeader">Locations</h2>
+                <h2>Locations</h2>
                 <button id="globalRefreshButton" class="hidden small-refresh-button">Refresh All Stale</button>
             </div>
             <div id="locationButtons">
