--- a/index.html
+++ b/index.html
@@ -261,6 +261,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./rc/';">
+                    <td class="project-image-cell">
+                        <a href="./rc/" tabindex="-1">
+                            <img src="./images/rc.png" alt="rc (Run Continuously) Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./rc/" tabindex="-1">
+                            <div>
+                                <h2>rc (Run Continuously)</h2>
+                                <p><b>rc v1</b> is a command-line utility that executes a given command string in a loop. After each execution, it waits for a specified number of minutes before running the command again. It features an optional precision mode to account for the command's execution time, preventing timing drift and ensuring runs start at a consistent interval.<br><br>Available in a native Go version for cross-platform performance and a PowerShell version for Windows environments. </p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
