kreft.us HTML format update.2

--- a/gw/index.html
+++ b/gw/index.html
@@ -114,6 +114,7 @@
                 padding-bottom: 1rem;
             }
             .project-image-cell img {
+                width: auto; /* Let aspect ratio be determined by height and max-width */
                 max-width: 100%; /* Allow image to scale down fully on very small screens */
                 margin: 0; /* Align left */
             }
