--- a/habit/index.html
+++ b/habit/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#4CAF50">
   <title>Habit Tracker</title>
   <link rel="stylesheet" href="styles.css">
@@ -15,6 +15,12 @@
     .task-text, .category h3 {
       user-select: none;
       -webkit-user-select: none;
+    }
+
+    /* Increase the size of the color picker for better visibility */
+    #color-picker {
+      height: 25px;
+      width: 50px;
     }
   </style>
 </head>
