BMON PS Launch.web

--- a/vbtc/index.html
+++ b/vbtc/index.html
@@ -151,6 +151,8 @@
                             <p class="readme-link">↳ <a href="../go/vbtc/README.txt">README</a></p>
                             <p><b>PowerShell Edition:</b> [ <a href="../ps/vbtc/vbtc.ps1">ps1</a> / <a href="../ps/vbtc/vbtc.exe">exe</a> ]</p>
                             <p class="readme-link">↳ <a href="../ps/vbtc/README.txt">README</a></p>
+                            <p><b>Bmon:</b>(vBTC - Addon) [ <a href="../ps/vbtc/bmon.ps1">ps1</a> / <a href="../ps/vbtc/bmon.exe">exe</a> ]</p>
+                            <p class="readme-link">↳ <a href="../ps/vbtc/BMON-README.txt">README</a></p>
                         </div>
                     </td>
                 </tr>
