BMON PS v1.3 - Sparkline - 'H' Key (Webpage Note)

--- a/vbtc/index.html
+++ b/vbtc/index.html
@@ -145,9 +145,9 @@
                             <p>
                                 Available in a native Go version for cross-platform performance and a PowerShell version for Windows environments.
                             </p>
-                            <h3>Bmon v1</h3>
+                            <h3>Bmon v1.4</h3>
                             <p>
-                                <b>Bmon</b> is a command-line utility for monitoring the real-time market rate of Bitcoin. Its interactive mode allows you to start, pause, and reset the comparison price, making it easy to track changes from a specific point in time. The tool also includes a non-interactive monitoring mode for continuous tracking and a built-in converter for quick calculations.
+                                <b>Bmon</b> is a lightweight, real-time Bitcoin price monitor that runs in the command line. It features multiple monitoring modes, Simple interactive mode and also includes a 5-minute quick-glance mode and a 24-hour long-duration single-line mode. Users can toggle a sparkline chart, enable audible price-change alerts, and perform on-demand currency conversions.
                             </p>
                             <h3>Downloads</h3>
                             <p><b>GO Edition:</b> PC [ <a href="../go/vbtc/bin/pc/x86/vbtc.exe">x86</a> / <a href="../go/vbtc/bin/pc/x64/vbtc.exe">x64</a> ] Mac [ <a href="../go/vbtc/bin/mac/amd64/vbtc.zip">amd64</a> / <a href="../go/vbtc/bin/mac/arm64/vbtc.zip">arm64</a> ] Linux [ <a href="../go/vbtc/bin/linux/x86/vbtc">x86</a> / <a href="../go/vbtc/bin/linux/amd64/vbtc">amd64</a> ]</p>
