BMON PS v1.4 Directory Move

--- a/vbtc/index.html
+++ b/vbtc/index.html
@@ -134,6 +134,7 @@
                 <tr class="project-row">
                     <td class="project-image-cell">
                         <img src="../images/vbtc.png" alt="vBTC Application Screenshot">
+                        <img src="../images/bmon.png" alt="Bmon Application Screenshot" style="margin-top: 2rem;">
                     </td>
                     <td class="project-text-cell">
                         <div>
@@ -154,8 +155,8 @@
                             <p class="readme-link">↳ <a href="../go/vbtc/README.txt">README</a></p>
                             <p><b>PowerShell Edition:</b> [ <a href="../ps/vbtc/vbtc.ps1">ps1</a> / <a href="../ps/vbtc/vbtc.exe">exe</a> ]</p>
                             <p class="readme-link">↳ <a href="../ps/vbtc/README.txt">README</a></p>
-                            <p><b>Bmon:</b> (vBTC - Addon) [ <a href="../ps/vbtc/bmon.ps1">ps1</a> / <a href="../ps/vbtc/bmon.exe">exe</a> ]</p>
-                            <p class="readme-link">↳ <a href="../ps/vbtc/BMON-README.txt">README</a></p>
+                            <p><b>Bmon:</b> (vBTC - Addon) [ <a href="../ps/bmon/bmon.ps1">ps1</a> / <a href="../ps/bmon/bmon.exe">exe</a> ]</p>
+                            <p class="readme-link">↳ <a href="../ps/bmon/README.txt">README</a></p>
                         </div>
                     </td>
                 </tr>
