--- a/convert/index.html
+++ b/convert/index.html
@@ -56,6 +56,7 @@
             font-size: 1.2em;
             box-sizing: border-box;
             -moz-appearance: textfield;
+            appearance: textfield;
         }
         input[type="number"]::-webkit-outer-spin-button,
         input[type="number"]::-webkit-inner-spin-button {
