BMON v1.5 PS/GO Webpage Launch

--- a/index.html
+++ b/index.html
@@ -250,6 +250,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./bmon/';">
+                    <td class="project-image-cell">
+                        <a href="./bmon/" tabindex="-1">
+                            <img src="./images/bmon.png" alt="Bmon - Bitcoin Price Monitor Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./bmon/" tabindex="-1">
+                            <div>
+                                <h2>Bmon v1.5</h2>
+                                <p><b>Bmon</b> is a lightweight, real-time Bitcoin price monitor that runs in the command line. It features multiple monitoring modes, including an interactive mode with start/pause functionality, a 5-minute quick-glance mode (-go), and a 24-hour long-duration single-line mode (-golong). Features include a visual sparkline chart showing price trends, audible price-change alerts, and on-demand currency conversions (BTC ↔ USD ↔ Satoshis). Available in both Go and PowerShell versions, providing cross-platform compatibility and native performance.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./gw/';">
                     <td class="project-image-cell">
                         <a href="./gw/" tabindex="-1">
