--- a/index.html
+++ b/index.html
@@ -235,6 +235,21 @@
         <h2 style="text-align: center; margin-top: 3rem; border-bottom: 1px solid #ccc; padding-bottom: 0.5rem;">CLI Applications</h2>
         <table>
             <tbody>
+                <tr class="project-row" onclick="window.location.href='./larry/';">
+                    <td class="project-image-cell">
+                        <a href="./larry/" tabindex="-1">
+                            <img src="./images/larry.png" alt="Larry - Terminal Frogger-like Game">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./larry/" tabindex="-1">
+                            <div>
+                                <h2>Larry v1.0</h2>
+                                <p><b>Larry</b> is a terminal Frogger-like game written in Go with tcell. Guide a green '@' across traffic with WASD/Arrows, Space to pause, Q/Esc to quit. Levels change color themes, add vehicles, and increase speed; safe shoulders and gaps help you through. Downloads and README on the project page.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./vbtc/';">
                     <td class="project-image-cell">
                         <a href="./vbtc/" tabindex="-1">
