Larry GO 1.1 +Scoreboard.2

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <a href="./larry/" tabindex="-1">
                             <div>
                                 <h2>Larry v1.1</h2>
-                                <p><b>Larry</b> is a terminal Frogger-like game written in Go with tcell. Guide a green '@' across traffic with WASD/Arrows, Space to pause, Q/Esc to quit. Levels change color themes, add vehicles, and increase speed; safe shoulders and gaps help you through. Downloads and README on the project page.</p>
+                                <p><b>Larry</b> is a terminal Frogger-like game written in Go with tcell. Guide a green '@' across traffic with WASD/Arrows, Space to pause, Esc to quit. Levels change color themes, add vehicles, and increase speed; safe shoulders and gaps help you through. Includes a persistent Top-10 scoreboard with name entry. Downloads and README on the project page.</p>
                             </div>
                         </a>
                     </td>
