--- a/larry/index.html
+++ b/larry/index.html
@@ -43,7 +43,7 @@
                                 <b>Larry</b> is a console arcade game where you guide a green <code>@</code> across roads with moving traffic. Levels add a fresh color theme, more cars, and faster lanes. Safe shoulders and gaps offer breathing room, and you earn points for each row climbed and for reaching the far side.
                             </p>
                             <h3>Controls</h3>
-                            <p>Arrows or WASD to move, Space to pause, Q/Esc to quit.</p>
+                            <p>Arrows or WASD to move, Space to pause, Esc to quit.</p>
                             <h3>Downloads</h3>
                             <p><b>Go Build:</b> PC [ <a href="../go/larry/bin/win/x86/larry.exe">x86</a> / <a href="../go/larry/bin/win/x64/larry.exe">x64</a> ] Linux [ <a href="../go/larry/bin/linux/x86/larry">x86</a> / <a href="../go/larry/bin/linux/amd64/larry">amd64</a> ]</p>
                             <p class="readme-link">↳ <a href="../go/larry/README.txt">README</a></p>
@@ -54,6 +54,7 @@
                                 <li>Per-lane vehicle classes: compact (=>), regular (<#>), semi (####>)</li>
                                 <li>Level-based color themes, density and speed scaling</li>
                                 <li>Lives, per-row scoring, and session Top score</li>
+                                <li>Top-10 scoreboard with name entry and saved history</li>
                             </ul>
                         </div>
                     </td>
