--- a/index.html
+++ b/index.html
@@ -295,6 +295,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./gf/';">
+                    <td class="project-image-cell">
+                        <a href="./gf/" tabindex="-1">
+                            <img src="./images/gf.png" alt="GetForecast CLI Screenshot">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./gf/" tabindex="-1">
+                            <div>
+                                <h2>GetForecast</h2>
+                                <p><b>GetForecast</b> is a PowerShell script that retrieves and displays detailed weather information for a specified location using the National Weather Service API. It accepts US zip codes or "City, State" strings, and provides current conditions, hourly forecasts, daily forecasts, weather alerts, and more with smart color-coding and interactive display modes. Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls. No API registration required.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./rc/';">
                     <td class="project-image-cell">
                         <a href="./rc/" tabindex="-1">
