Add README guidance for emoji display in PowerShell and update index.html with a note on README accessibility for emoji issues

--- a/gf/index.html
+++ b/gf/index.html
@@ -148,6 +148,7 @@
                             <h3>Downloads</h3>
                             <p><b>PowerShell Edition:</b> [ <a href="../ps/gf/gf.ps1">ps1</a> ]</p>
                             <p class="readme-link">↳ <a href="../ps/gf/README.txt">README</a></p>
+                            <p class="readme-link">↳ See README if emoji are not displaying for you</p>
                         </div>
                     </td>
                 </tr>
