--- a/index.html
+++ b/index.html
@@ -20,12 +20,50 @@
             padding: 1.5rem 0;
             text-align: center;
             margin-bottom: 2rem;
+            position: relative;
         }
 
         header h1 {
             margin: 0;
             font-size: 3rem; /* Increased by 20% from 2.5rem */
             letter-spacing: 2px;
+        }
+
+        .github-link {
+            position: absolute;
+            top: 1.5rem;
+            right: 2rem;
+            display: inline-block;
+            padding: 0.5rem;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .github-link:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: scale(1.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        .github-link img {
+            width: 32px;
+            height: 32px;
+            display: block;
+        }
+
+        /* Responsive adjustments for GitHub link */
+        @media (max-width: 768px) {
+            .github-link {
+                top: 1rem;
+                right: 1rem;
+                padding: 0.4rem;
+            }
+            
+            .github-link img {
+                width: 28px;
+                height: 28px;
+            }
         }
 
         .container {
@@ -120,6 +158,9 @@
 
     <header>
         <h1>KREFT.US PROJECTS</h1>
+        <a href="https://github.com/Thujone82/kreftus" target="_blank" rel="noopener noreferrer" class="github-link" title="View on GitHub">
+            <img src="./images/github-mark-white.png" alt="GitHub">
+        </a>
     </header>
 
     <div class="container">
