--- a/larry/index.html
+++ b/larry/index.html
@@ -6,7 +6,14 @@
     <title>Larry - Terminal Frogger-like Game</title>
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin:0; padding:0; background:#f4f4f4; color:#333; line-height:1.6; }
-        header { background:#333; color:#fff; padding:1.5rem 0; text-align:center; margin-bottom:2rem; }
+        header { background:#333; color:#fff; padding:1.5rem 0; text-align:center; margin-bottom:2rem; position: relative; }
+        .github-link { position: absolute; top: 1.5rem; right: 2rem; display: inline-block; padding: 0.5rem; border-radius: 8px; transition: all 0.3s ease; background-color: rgba(255, 255, 255, 0.1); }
+        .github-link:hover { background-color: rgba(255, 255, 255, 0.2); transform: scale(1.1); box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); }
+        .github-link img { width: 32px; height: 32px; display: block; }
+        .home-link { position: absolute; top: 1.5rem; left: 2rem; display: inline-block; padding: 0.5rem; border-radius: 8px; transition: all 0.3s ease; background-color: rgba(255, 255, 255, 0.1); }
+        .home-link:hover { background-color: rgba(255, 255, 255, 0.2); transform: scale(1.1); box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); }
+        .home-link img { width: 32px; height: 32px; display: block; }
+        @media (max-width: 768px) { .github-link, .home-link { top: 1rem; padding: 0.4rem; } .github-link { right: 1rem; } .home-link { left: 1rem; } .github-link img, .home-link img { width: 28px; height: 28px; } }
         header h1 { margin:0; font-size:3rem; letter-spacing:2px; }
         .container { width:80%; margin:auto; overflow:hidden; }
         table { width:100%; border-collapse:collapse; margin-top:2rem; background:#fff; box-shadow:0 0 10px rgba(0,0,0,0.1); }
@@ -26,6 +33,12 @@
 <body>
 
     <header>
+        <a href="../" class="home-link" title="Back to Home">
+            <img src="../images/home.png" alt="Home">
+        </a>
+        <a href="https://github.com/Thujone82/kreftus" target="_blank" rel="noopener noreferrer" class="github-link" title="View on GitHub">
+            <img src="../images/github-mark-white.png" alt="GitHub">
+        </a>
         <h1>Larry - Terminal Frogger-like Game</h1>
     </header>
 
