Update index.html to include dynamic location detection feature
- Enhanced the description of the GetForecast script to clarify that using 'here' allows for automatic weather retrieval based on the user's IP address.
- Improved documentation for user understanding of the new location input option.

--- a/gf/index.html
+++ b/gf/index.html
@@ -216,7 +216,7 @@
                                 <b>GetForecast</b> is a PowerShell script that retrieves and displays detailed weather information for a specified location using the National Weather Service API. It accepts US zip codes or "City, State" strings, and provides current conditions, hourly forecasts, daily forecasts, weather alerts, and more with smart color-coding and interactive display modes.
                             </p>
                             <p>
-                                Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls for switching between different display views.
+                                Features include geocoding via OpenStreetMap Nominatim API, temperature trend detection, wind gust information, dew point calculations, and an interactive mode with keyboard controls for switching between different display views. Using 'here' for location is used to dynamically determine location via IP address for automatic weather retrieval.
                             </p>
 
                             <h3>Updates</h3>
