Add UPDate Tool and enhance documentation for v1.1
- Introduced UPDate Tool in index.html with a detailed description and image.
- Updated GEMINI.md to include new features for v1.1: Esc key navigation, job removal functionality, enhanced auto mode, and improved output display.
- Revised README.txt to reflect the new features and usage instructions.
- Modified upd.ps1 to implement job removal logic and improved output messages for file operations.

--- a/index.html
+++ b/index.html
@@ -467,6 +467,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./upd/';">
+                    <td class="project-image-cell">
+                        <a href="./upd/" tabindex="-1">
+                            <img src="./images/upd.png" alt="UPDate PowerShell tool interface showing job management and file update operations" loading="lazy">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./upd/" tabindex="-1">
+                            <div>
+                                <h2>UPDate Tool</h2>
+                                <p><b>UPDate v1.1</b> is an interactive PowerShell command-line tool for managing and executing file update jobs. It allows you to configure update sources (local paths or URLs) and destination directories, then execute updates with a simple interactive interface featuring color-coded output and multiple job selection capabilities. Features include Esc key navigation, job removal functionality, enhanced auto mode, and improved output display with Source/Destination information.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./rc/';">
                     <td class="project-image-cell">
                         <a href="./rc/" tabindex="-1">
