Update download links in index.html and fix typo in build.ps1
- Added an executable download option for the PowerShell Edition in index.html.
- Corrected a typo in the build.ps1 script from "conver" to "convert".

--- a/gf/index.html
+++ b/gf/index.html
@@ -225,7 +225,7 @@
                             </div>
 
                             <h3>Downloads</h3>
-                            <p><b>PowerShell Edition:</b> [ <a href="../ps/gf/gf.ps1">ps1</a> ]</p>
+                            <p><b>PowerShell Edition:</b> [ <a href="../ps/gf/gf.ps1">ps1</a> / <a href="../ps/gf/gf.exe">exe</a> ]</p>
                             <p class="readme-link">↳ <a href="../ps/gf/README.txt">README</a></p>
                             <p class="readme-link">↳ See README if emoji are not displaying for you</p>
                         </div>
