Update SEO meta tags in index.html to enhance content description and keywords

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>KREFT.US PROJECTS</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="KREFT.US - A collection of innovative web applications and CLI tools including Snake VS, nfo2go, SpiroGen, BTC Track, GENE, Conway's Game of Life, Double Pendulum, and various command-line utilities for Bitcoin monitoring, weather forecasting, and more.">
-    <meta name="keywords" content="web applications, CLI tools, Bitcoin tracker, weather forecast, Conway's Game of Life, double pendulum, snake game, spirograph, genetic algorithm, terminal games, PowerShell scripts, Go applications">
+    <meta name="description" content="KREFT.US - A collection of innovative web applications and CLI tools including Snake VS, nfo2go, SpiroGen, BTC Track, GENE, Conway's Game of Life, Double Pendulum, and various command-line utilities for Bitcoin monitoring, weather forecasting, file management, and more.">
+    <meta name="keywords" content="web applications, CLI tools, Bitcoin tracker, weather forecast, Conway's Game of Life, double pendulum, snake game, spirograph, genetic algorithm, terminal games, PowerShell scripts, local file upsate tool,Go applications">
     <meta name="author" content="Thujone82">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
