- Enhanced the description of GetWeather in index.html to include information about GetForecast as a successor to GetWeather. - Added a new paragraph in gw/index.html highlighting the availability of GetForecast without an API key.

--- a/gw/index.html
+++ b/gw/index.html
@@ -218,6 +218,9 @@
                             <p>
                                 Available in a native Go version for cross-platform performance and a PowerShell version for Windows environments.
                             </p>
+                            <p>
+                                See GetForecast is a NWS based successor to GetWeather with no API key required.
+                            </p>
 
                             <h3>Updates</h3>
                             <div id="updates-container">
