--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                         <a href="./upd/" tabindex="-1">
                             <div>
                                 <h2>UPDate Tool</h2>
-                                <p><b>UPDate v1.1</b> is an interactive PowerShell command-line tool for managing and executing file update jobs. It allows you to configure update sources (local paths or URLs) and destination directories, then execute updates with a simple interactive interface featuring color-coded output and multiple job selection capabilities. Features include Esc key navigation, job removal functionality, enhanced auto mode, and improved output display with Source/Destination information.</p>
+                                <p><b>UPDate v1.1</b> is an interactive PowerShell command-line tool for managing and executing file update jobs. It allows you to configure update sources (local paths or URLs) and destination directories, then execute updates with a simple interactive interface featuring color-coded output and multiple job selection capabilities. Features include Esc key navigation, job removal functionality, enhanced auto mode, and improved output display with Source/Destination information. See GetForecast is a NWS based successor to GetWeather with no API key required.</p>
                             </div>
                         </a>
                     </td>
