Refactor moon phase calculations and update UI elements
- Simplified the moon phase calculation logic in gf.ps1 to include both next full moon and new moon dates.
- Updated Show-CurrentConditions and Show-FullWeatherReport functions to display new moon information.
- Revised index.html to streamline the title of the Moon Phase Calculator.

--- a/moon/index.html
+++ b/moon/index.html
@@ -137,7 +137,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌙 Moon Phase Calculator (Simple Method)</h1>
+        <h1>🌙 Moon Phase Calculator</h1>
         
         <div class="input-group">
             <label for="dateInput">Select a date:</label>
