--- a/forecast/index.html
+++ b/forecast/index.html
@@ -65,11 +65,11 @@
         </div>
     </main>
 
-    <script src="js/utils.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/weather.js"></script>
-    <script src="js/display.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/utils.js?v=2"></script>
+    <script src="js/api.js?v=2"></script>
+    <script src="js/weather.js?v=2"></script>
+    <script src="js/display.js?v=2"></script>
+    <script src="js/app.js?v=2"></script>
 </body>
 </html>
 
