--- a/forecast/index.html
+++ b/forecast/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <header>
-        <h1>Forecast</h1>
+        <h1>
+            <img src="icons/icon-192.png" alt="Forecast Icon" class="header-icon">
+            Forecast
+        </h1>
     </header>
 
     <main>
