Enhance cache management by deleting old caches, and modify reload button functionality to clear caches and unregister service worker before reloading the page. Update CSS link in index.html for cache busting.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#008B8B">
     <title>Forecast</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=2">
     <link rel="icon" type="image/png" href="icons/icon-192.png">
 </head>
 <body>
