Enhance Weather App with Historical Observations Feature
- Added a new Observations Mode to display historical weather data for the past 7 days, including daily aggregates such as high/low temperatures, wind speeds, humidity, and precipitation.
- Updated the user interface to include a History button, which is enabled based on the availability of observations data.
- Implemented functions to fetch and process observations from the National Weather Service API, ensuring accurate historical reporting.
- Improved error handling and user feedback for location detection and data loading processes.
- Incremented JavaScript versioning in index.html and updated related scripts for better performance.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -29,11 +29,11 @@
         <!-- Mode Selector Buttons -->
         <section class="mode-selector">
             <button id="fullModeBtn" class="mode-btn active" data-mode="full">Full</button>
-            <button id="terseModeBtn" class="mode-btn" data-mode="terse">Terse</button>
-            <button id="hourlyModeBtn" class="mode-btn" data-mode="hourly">Hourly</button>
             <button id="dailyModeBtn" class="mode-btn" data-mode="daily">Daily</button>
+            <button id="hourlyModeBtn" class="mode-btn" data-mode="hourly">Hourly</button>
             <button id="rainModeBtn" class="mode-btn" data-mode="rain">Rain</button>
             <button id="windModeBtn" class="mode-btn" data-mode="wind">Wind</button>
+            <button id="historyModeBtn" class="mode-btn" data-mode="history">History</button>
         </section>
 
         <!-- Control Bar -->
@@ -65,11 +65,11 @@
         </div>
     </main>
 
-    <script src="js/utils.js?v=3"></script>
-    <script src="js/api.js?v=3"></script>
-    <script src="js/weather.js?v=3"></script>
-    <script src="js/display.js?v=3"></script>
-    <script src="js/app.js?v=3"></script>
+    <script src="js/utils.js?v=4"></script>
+    <script src="js/api.js?v=4"></script>
+    <script src="js/weather.js?v=4"></script>
+    <script src="js/display.js?v=4"></script>
+    <script src="js/app.js?v=4"></script>
 </body>
 </html>
 
