Add Forecast Weather Utility to Index and Readme
- Introduced a new project row in index.html for the Forecast web application, linking to its dedicated page and providing a detailed description of its features.
- Updated readme.md to include a section for Weather & Utility Tools, highlighting the Forecast application with an icon and brief overview.

--- a/index.html
+++ b/index.html
@@ -311,6 +311,21 @@
                         </a>
                     </td>
                 </tr>
+                <tr class="project-row" onclick="window.location.href='./forecast/';">
+                    <td class="project-image-cell">
+                        <a href="./forecast/" tabindex="-1">
+                            <img src="./forecast/icons/icon-192.png" alt="Forecast weather icon showing sun and rain" loading="lazy">
+                        </a>
+                    </td>
+                    <td class="project-text-cell">
+                        <a href="./forecast/" tabindex="-1">
+                            <div>
+                                <h2>Forecast</h2>
+                                <p><b>Forecast</b> - Web version of the Terminal app 'GetForecast'. Comprehensive weather utility using National Weather Service API. Features include current conditions, hourly and daily forecasts, weather alerts, and multiple display modes (Full, Daily, Hourly, Rain, Wind, History). No API registration required.</p>
+                            </div>
+                        </a>
+                    </td>
+                </tr>
                 <tr class="project-row" onclick="window.location.href='./spiro/';">
                     <td class="project-image-cell">
                         <a href="./spiro/" tabindex="-1">
