Update Forecast Icons for Consistency
- Replaced the icon in index.html from a 192px image to a 512px image for improved visual quality.
- Updated the header icon in forecast/index.html to a new 192px image, ensuring consistency across the application.

--- a/forecast/index.html
+++ b/forecast/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-left">
             <h1>
-                <img src="icons/icon-512.png" alt="Forecast Icon" class="header-icon">
+                <img src="icons/Light-icon-192.png" alt="Forecast Icon" class="header-icon">
                 Forecast
             </h1>
         </div>
